# Meta-Queue-waiting-time-optimizer

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
queue-waiting-time-optimizer/: Dockerfile  app.py  inference.py  requirements.txt
queue-waiting-time-optimizer/src/queue_waiting_time_optimizer.egg-info/: PKG-INFO  SOURCES.txt
server/: app.py
